# tasx

./: CMakeLists.txt  README.md
include/: group.h  input_parser.h  output.h  todo.h  todos.h  utils.h
src/: group.cpp  input_parser.cpp  main.cpp  output.cpp  todo.cpp  todos.cpp  utils.cpp
